<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_radius_green"
    android:backgroundTint="@color/white"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_addedit_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="Thêm khoản thu/chi" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_addedit_til_ten_giao_dich"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        android:hint="@string/transaction_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_addedit_til_so_tien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/money">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_addedit_til_mo_ta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="100"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/note">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_addedit_til_ngay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_calendar"
        app:placeholderText="dd/mm/yyy"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/time">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Loại giao dịch:">
    </TextView>
    <Spinner
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/phanLoaiSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_margin="2dp"
            android:id="@+id/dialog_addedit_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:backgroundTint="#bdc3c7"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:textStyle="bold" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/dialog_addedit_btn_confirm"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/add"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>