<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_radius_green"
    android:backgroundTint="@color/white"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:drawableStart="@drawable/ic_warning"
        android:drawableEnd="@drawable/ic_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e74c3c"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="Xác nhận xoá" />

    <TextView
        android:id="@+id/dialog_ask_delete_tv_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_u_sure" />

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_margin="2dp"
            android:id="@+id/dialog_ask_delete_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:backgroundTint="#bdc3c7"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:textStyle="bold" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/dialog_ask_delete_btn_confirm"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:backgroundTint="#e74c3c"
            android:text="@string/ok"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>